crates/laserbeam/tests/compile_fail/bad_variant.rs
use laserbeam::Laserbeam;

#[derive(Laserbeam)]
#[laserbeam(path = P, resolved = R)]
enum BadVariant {
    Unit,
}

fn main() {}
